# speller-benchmark

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  bench.c  bench.cpp  vcpkg.json  version.h.in
.github/workflows/: cmake.yml
cmake/: BuildType.cmake  Coverage.cmake  Sanitizers.cmake  Warnings.cmake  vcpkg.cmake
src/: CMakeLists.txt  bench.cpp  benchmark.cpp  benchmark.hpp  colors.cpp  colors.hpp  main.cpp  record.cpp  record.hpp  results.cpp  results.hpp
tests/: CMakeLists.txt
